--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,7 +25,7 @@ Planification des livraisons
 
 3. Attribution des responsabilités
 
-Monalissa : Gestion administrative
+Monalissa : gestionnaire 
 
 Équipe logistique : Préparation et livraison
 
